Adding logo and working on menu

--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-  <div id="flex-container">
-  <div class="title">
-    <img src="img/logo.png" alt="Quotes For Creatives Logo">
+  <div id="container">
+      <div class="flex-container">
+        <div class="title">
+          <img src="img/logo.svg" alt="Quotes For Creatives Logo">
+        </div>
+        <div class="nav-button">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="text-container">
+          <p class="quote"></p>
+          <a class="link" href="" target="_blank">
+            <p class="name"></p>
+          </a>
+        </div>
+        <div class="button">Get New Quote</div>
+    </div>
+    <div class="menu"><p>Hello</p></div>
   </div>
-  <div class="nav-button">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <div class="text-container">
-    <p class="quote"></p>
-    <a class="link" href="" target="_blank">
-      <p class="name"></p>
-    </a>
-  </div>
-  <div class="button">Get New Quote</div>
-</div>
-
 </body>
 </html>
