Updating slide menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div id="container">
       <div class="flex-container">
         <div class="title">
           <img src="img/logo.svg" alt="Quotes For Creatives Logo">
@@ -27,7 +26,11 @@
         </div>
         <div class="button">Get New Quote</div>
     </div>
-    <div class="menu"><p>Hello</p></div>
-  </div>
+    <div class="menu">
+      <img class="me" src="./img/zachatar.jpg" alt="Zach Urich"/>
+      <div class="description">
+        <p>Welcome to Quotes for Creatives! I’m Zach Urich, the curator of this site. I want to provide you, the creative, with curated inspiration and challenge to help you improve throughout your creative endeavors. Check back often for fresh quotes!</p>
+      </div>
+    </div>
 </body>
 </html>
