Removing scroll overflow and mobile link highlighting

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="button">Get New Quote</div>
     </div>
     <div class="menu">
-      <img class="me" src="./img/zachatar.jpg" alt="Zach Urich"/>
+      <img class="me" src="./img/zachatar.png" alt="Zach Urich"/>
       <div class="description">
-        <p>Welcome to Quotes for Creatives! I’m Zach Urich, the curator of this site. I want to provide you, the creative, with curated inspiration and challenge to help you improve throughout your creative endeavors. Check back often for fresh quotes!</p>
+        <p>Welcome to Quotes for Creatives! I’m <a href="https://twitter.com/zach462">Zach Urich</a>, the curator of this site. I want to provide you, the creative, with curated inspiration and challenge to help you improve throughout your creative endeavors. Check back often for fresh quotes!</p>
       </div>
     </div>
 </body>
