--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Quotes For Creatives</title>
+  <link rel="stylesheet" href="./main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="./js/main.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="./output.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
