--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
       <div class="flex-container">
         <div class="title">
-          <img src="img/logo-02.svg" alt="Quotes For Creatives Logo">
+          <img src="img/logo.svg" alt="Quotes For Creatives Logo">
         </div>
         <div class="nav-button">
           <span></span>
