Hide button when the list has ended

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <div class="text-container">
           <p class="quote"></p>
+          <div class="divider"></div>
           <a class="link" href="" target="_blank">
             <p class="name"></p>
           </a>
