--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Quotes For Creatives</title>
   <link rel="stylesheet" href="./main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="./js/data.js" type="text/javascript"></script>
   <script src="./js/main.js" type="text/javascript"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
